INCLUDE(ExternalProject)

file(MAKE_DIRECTORY "${BINDIR}")
file(MAKE_DIRECTORY "${FRAMEWORK_DIR}//src/SimEx/Calculators/CalculatorUtilities")

FIND_PACKAGE (HDF5 REQUIRED)


ExternalProject_Add(
    recon
    DOWNLOAD_COMMAND ""
    SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}
    CONFIGURE_COMMAND ""
    CMAKE_COMMAND ""
    MAKE_COMMAND ""
    BUILD_COMMAND ""
    BUILD_IN_SOURCE 1
    INSTALL_COMMAND SIMEX=${FRAMEWORK_DIR} PYPATH=${PYPATH} PREFIX_DIR=${CMAKE_INSTALL_PREFIX} PACKAGES=${PACKAGES} PATCHES=${PATCHES} SRC=${MODULES_SCR} make -f recon.mk recon
    )
    
